--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@ body {
 }
 
 .book-author {
-  color: #777777;
+  color: rgb(119, 119, 119);
   font-size: 14px;
   margin-bottom: 10px;
 }
@@ -56,7 +56,7 @@ body {
 .book-price {
 	
 width:200%;
-  background-color: #2ecc71;
+  background-color: rgb(46, 204, 113);
   color: #fff;
   padding: 10px 15px;
   border-radius: 3px;
