--- a/main.html
+++ b/main.html
@@ -1,93 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Book Library</title>
-<style>
-body {
-  background-color: #f8f8f8;
-}
-
-.book-library {
-  background-color: #ffffff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  margin: 20px auto;
-  max-width: 800px;
-}
-
-.book {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  border-bottom: 1px solid #ddd;
-}
-
-.book:last-child {
-  border-bottom: none;
-}
-
-.book img {
-  width: 100px;
-  height: 150px;
-  margin-right: 20px;
-}
-
-.book-info {
-  flex: 1;
-}
-
-.book-title {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.book-author {
-  color: #777777;
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-
-.book-price {
-  background-color: #2ecc71;
-  color: #fff;
-  padding: 10px 15px;
-  border-radius: 3px;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Book Library</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="book-library">
+    <h1>Book Library</h1>
+    
+    <!-- Book 1 -->
+    <div class="book">
+      <img src="https://via.placeholder.com/150x220" alt="Spy in the Amber">
+      <div class="book-details">
+        <h3>Spy in the Amber</h3>
+        <p>By Manohar Malgonkar</p>
+        <div class="price-block">Rs. 299</div>
+      </div>
+    </div>
 
-<div class="book-library">
-  <h1>Book Library</h1>
-  <div class="book">
-    <img src="spy_in_the_amber.jpg" alt="Spy in the Amber">
-    <div class="book-info">
-      <h3 class="book-title">SPY IN THE AMBER</h3>
-      <p class="book-author">By Manohar Malgonkar</p>
-      <div class="book-price">Rs. 299</div>
+    <!-- Book 2 -->
+    <div class="book">
+      <img src="https://via.placeholder.com/150x220" alt="Sacred Games">
+      <div class="book-details">
+        <h3>Sacred Games</h3>
+        <p>By Vikram Chandra</p>
+        <div class="price-block">Rs. 199</div>
+      </div>
+    </div>
+
+    <!-- Book 3 -->
+    <div class="book">
+      <img src="https://via.placeholder.com/150x220" alt="Byomkesh Bakshi">
+      <div class="book-details">
+        <h3>Byomkesh Bakshi</h3>
+        <p>By Sharadindu Bandyopadhyay</p>
+        <div class="price-block">Rs. 249</div>
+      </div>
     </div>
   </div>
-  <div class="book">
-    <img src="sacred_games.jpg" alt="Sacred Games">
-    <div class="book-info">
-      <h3 class="book-title">Sacred Games</h3>
-      <p class="book-author">by Vikram Chandra</p>
-      <div class="book-price">Rs. 199</div>
-    </div>
-  </div>
-  <div class="book">
-    <img src="byomkesh_bakshi.jpg" alt="Byomkesh Bakshi">
-    <div class="book-info">
-      <h3 class="book-title">BYOMKESH BAKSHI</h3>
-      <p class="book-author">By Sharadindu Bandyopadhyay</p>
-      <div class="book-price">Rs. 249</div>
-    </div>
-  </div>
-</div>
-<script></script>
 </body>
-	
 </html>
