--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
     <div class="book">
       <img src="https://via.placeholder.com/150x220" alt="Spy in the Amber">
       <div class="book-details">
-        <h2>Spy in the Amber</h2>
-        <p>By Manohar Malgonkar</p>
+        <h3>Spy in the Amber</h3>
+        <p class="author">By Manohar Malgonkar</p>
         <div class="price-block">Rs. 299</div>
       </div>
     </div>
@@ -24,8 +24,8 @@
     <div class="book">
       <img src="https://via.placeholder.com/150x220" alt="Sacred Games">
       <div class="book-details">
-        <h2>Sacred Games</h2>
-        <p>By Vikram Chandra</p>
+        <h3>Sacred Games</h3>
+        <p class="author">By Vikram Chandra</p>
         <div class="price-block">Rs. 199</div>
       </div>
     </div>
@@ -34,8 +34,8 @@
     <div class="book">
       <img src="https://via.placeholder.com/150x220" alt="Byomkesh Bakshi">
       <div class="book-details">
-        <h2>Byomkesh Bakshi</h2>
-        <p>By Sharadindu Bandyopadhyay</p>
+        <h3>Byomkesh Bakshi</h3>
+        <p class="author">By Sharadindu Bandyopadhyay</p>
         <div class="price-block">Rs. 249</div>
       </div>
     </div>
